--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -1,6 +1,8 @@
 // Created by gijigae on 2/17/16.
 extends layout
 
+include _includes/sharedHTMLfunctions
+
 block content
   .row.page-header
     .col-lg-12
@@ -10,42 +12,34 @@ block content
       .row
         .col-xs-12.col-sm-6
           p.rating
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star-empty
-            span.glyphicon.glyphicon-star-empty
-
+            +outputRating(location.rating)
           p 125 High Street, Reading, RG6 1PS
           .panel.panel-primary
             .panel-heading
               h2.panel-title Opening hours
             .panel-body
-              p Monday - Friday : 07:00am - 07:00pm
-              p Saturday : 08:00am - 05:00pm
-              p Sunday : closed
+              each time in location.openningTimes
+                p
+                  | #{time.days} :
+                  if time.closed
+                    | closed
+                  else
+                    | #{time.opening} - #{time.closing}
           .panel.panel-primary
             .panel-heading
               h2.panel-title Facilities
             .panel-body
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Hot drinks
-              | &nbsp;
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Food
-              | &nbsp;
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Premium wifi
-              | &nbsp;
+              each facility in location.facilities
+                span.label.label-warning
+                  span.glyphicon.glyphicon-ok
+                  | &nbsp;#{facility}
+                | &nbsp;
         .col-xs-12.col-sm-6.location-map
           .panel.panel-primary
             .panel-heading
               h2.panel-title Location map
             .panel-body
-              img.img-responsive.img-rounded(src='https://goo.gl/maps/FMNfVtyJAf32')
+              img.img-responsive.img-rounded(src='https://maps.googleapis.com/maps/api/staticmap?center=#{location.coords.lat}, #{location.coords.lng}')
       .row
         .col-xs-12
           .panel.panel-primary.review-panel
@@ -53,32 +47,16 @@ block content
               a.btn.btn-default.pull-right(href='/location/review/new') Add review
               h2.panel-title Customer reviews
             .panel-body.review-container
-              .row
-                .review
-                  .well.well-sm.review-header
-                    span.rating
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                    span.reviewAuthor Simon Holmes
-                    small.reviewTimestamp 16 July 2013
-                  .col-xs-12
-                    p What a great place. I can't say enough good things about it.
-              .row
-                .review
-                  .well.well-sm.review-header
-                    span.rating
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star-empty
-                      span.glyphicon.glyphicon-star-empty
-                    span.reviewAuthor Charlie Chaplin
-                    small.reviewTimestamp 16 June 2013
-                  .col-xs-12
-                    p It was okay. Coffee wasn't great, but the wifi was fast
+              each review in location.reviews
+                .row
+                  .review
+                    .well.well-sm.review-header
+                      span.rating
+                        +outputRating(review.rating)
+                      span.reviewAuthor #{review.author}
+                      small.reviewTimestamp #{review.timestamp}
+                    .col-xs-12
+                      p !{(review.reviewText).replace(/\n/g, '<br />')}
     .col-xs-12.col-md-3
-      p.lead Simon's cafe is on Loc8r because it has accessbile wifi and space to sit down with your laptop and get some work done.
-      p If you've been and you like it - or if you don't - please leave a review to help other people just like you.
+      p.lead #{location.name} #{sidebar.context}
+      p= sidebar.callToAction
